--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 tools/nlohmann/json.hpp linguist-vendored
 tools/lodepng* linguist-vendored
 modified-remex/* linguist-vendored
+*.z80 linguist-language=Assembly
